Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78478

Wayland clients crash with window titles longer than 4k characters with unicode characters

XMLWordPrintable

    • Linux/Wayland
    • 1ed0782e93dafb0a3d5ef3a02c9c3999825817ee (qt/qtwayland/5.13) 45859d7521074a4921b8459eb0a6e2cc71b9dd5a (qt/qtwayland/5.12)

      Title says it all. We fixed this previously, but we truncate based on characters in a QString, and in the end the title is utf-8 encoded, so 1 char != 1 byte and we still overflow.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            johanhelsing Johan Helsing
            johanhelsing Johan Helsing
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes